unpackaged/main/default/objects/Order_Facilitator_Checklist__c/Order_Facilitator_Checklist__c.object-meta.xml
<CustomObject>
    <description>Checklists related to Order</description>
    <label>Order Facilitator Checklist</label>
    <nameField>
        <displayFormat>OFC{000000}</displayFormat>
        <label>Order Facilitator Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Facilitator Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>