unpackaged/main/default/objects/Order_Facilitator_Checklist__c/fields/Blocked_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Timestamp__c</fullName>
    <label>Blocked Timestamp</label>
    <type>DateTime</type>
</CustomField>