unpackaged/main/default/objects/Order_Facilitator_Checklist__c/fields/Blocked_Username__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Username__c</fullName>
    <description>Username of the user who marked the checklist as Blocked</description>
    <label>Blocked Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>