unpackaged/main/default/objects/Order_Facilitator_Checklist__c/fields/Completed_Username__c.field-meta.xml
<CustomField>
    <fullName>Completed_Username__c</fullName>
    <description>Username of the user who marked the checklist as complete</description>
    <label>Completed Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>