unpackaged/main/default/objects/Order_Facilitator_Checklist__c/fields/Is_Checked__c.field-meta.xml
<CustomField>
    <fullName>Is_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Advocates has selected the checklist or not.</description>
    <label>Is Checked?</label>
    <type>Checkbox</type>
</CustomField>