unpackaged/main/default/objects/Order_Facilitator_Checklist__c/fields/Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To mark if a checklist is completed</description>
    <label>Is Completed</label>
    <type>Checkbox</type>
</CustomField>