unpackaged/main/default/objects/Order_Facilitator_Checklist__c/validationRules/ValidateBlockedAndCompleted.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateBlockedAndCompleted</fullName>
    <active>true</active>
    <errorConditionFormula>Is_Blocked__c &amp;&amp; Is_Completed__c</errorConditionFormula>
    <errorMessage>Checklist can either be marked as Blocked or Completed at a time.</errorMessage>
</ValidationRule>